se agrego view para q nos envien mensajes al correo: proyecto.sia.py@gmail.com

--- a/estudiantes/templates/menu.html
+++ b/estudiantes/templates/menu.html
@@ -11,4 +11,7 @@
 	<a href="{% url 'perfil' %}" title="">
 		<h4>Perfil</h4>
 	</a>
+	<a href="{% url 'mensajes' %}" title="">
+		<h4>Contactanos</h4>
+	</a>
 </aside>
